# aws-sam-todo-api

./: .gitignore  README.md  docker-compose.yml  env.json  pyproject.toml  samconfig.toml  template.yaml
.aws-sam/: build.toml
.github/workflows/: deploy.yml
resources/: test_api.py
resources/functions/images/: app.py
resources/functions/todos/: app.py
templates/: api.yaml  dynamodb.yaml  s3.yaml
templates/images/: lambda.yaml
templates/todos/: api.yaml  dynamodb.yaml  lambda.yaml  s3.yaml  template.yaml
tests/unit/images/: get_presigned_url.sh  upload_image.sh
tests/unit/todos/: test_create_todo.py
